fix nav z-index, bobsudy url

--- a/frontend/pjt01/src/components/nav.css
+++ b/frontend/pjt01/src/components/nav.css
@@ -1,7 +1,7 @@
 .Nav {
   position: fixed;
   bottom: 0px;
-  z-index: 2;
+  z-index: 1;
   border-top: 4px solid rgb(189, 222, 255);
   width: 360px;
   height: 60px;
